git-svn-id: http://svn.vdombox.ru/flextools/trunk@8444 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -223,7 +223,7 @@
 				<button:WorkAreaButton id="saveButton"
 										   enabled="{unsaved}" height="20" icon="{VDOMImage.Save}"
 										   label="{ resourceManager.getString( 'Scripts_General', 'save' ) }" click="scriptEditor_saveHandler( event )"
-										   highlighted="{unsaved}"/>
+										   highlighted="{unsaved}" downColor="#D20000"/>
 				
 				<button:WorkAreaButton id="undoButton"
 									   height="25" icon="{VDOMImage.Undo}"
