git-svn-id: http://svn.vdombox.ru/flextools/trunk@8445 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
@@ -227,10 +227,12 @@
 					<s:HGroup id="imageGroup" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="5" gap="1">
 						
 						<mx:Image id="arrowButton" source="{VDOMImage.Arrow}" 
+								  width="16" height="16" smoothBitmapContent="true"
 								  alpha=".5" mouseOver="{ arrowButton.alpha = 1 }" mouseOut="{ arrowButton.alpha = .5 }"
 								  click="hostComponent.dispatchEvent( new TreeElementEvent( TreeElementEvent.CREATE_LINKAGE ) )"/>
 						
 						<mx:Image id="deleteButton" source="{VDOMImage.DeleteWhite}" 
+								  width="16" height="16" smoothBitmapContent="true"
 								  alpha=".5" mouseOver="{ deleteButton.alpha = 1 }" mouseOut="{ deleteButton.alpha = .5 }"/>
 						
 					</s:HGroup>
