--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ComboBoxLoginSkin.mxml
@@ -38,6 +38,8 @@ is defined by the ComboBoxTextInputSkin class.
     <fx:Script fb:purpose="styling">
         <![CDATA[       
 			import mx.events.FlexEvent;
+			
+			import spark.filters.DropShadowFilter;
             private var paddingChanged:Boolean;
             private var cornerRadiusChanged:Boolean;
             private var cornerRadius:Number = 0;            
