git-svn-id: http://svn.vdombox.ru/flextools/trunk@8447 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -163,7 +163,7 @@
 					
 					<button:VDOMButton id="cancelButton" width="48"
 							  click="hostComponent.close()"
-							  icon="@Embed(source='assets/Cancel.png')"
+							  icon="{ VDOMImage.DeleteBlack }"
 							  focusColor.normal="#CCCCCC"/>
 					
 					<button:VDOMButton focusColor.normal="#CCCCCC"
