--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
@@ -70,13 +70,12 @@
 		</s:Rect>
 	</s:VGroup>-->
 	
-	
 	<s:Rect top="1" width="100%" height="100%" radiusX="{width / 2}" radiusY="{ width / 2 }"
-			alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+			alpha.over="1" alpha.down="1">
 		<s:fill>
 			<s:LinearGradient>
-				<s:GradientEntry color="#707070" />
-				<s:GradientEntry color="#909090" />
+				<s:GradientEntry color="#a6a6a6" />
+				<s:GradientEntry color="#949494" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
