git-svn-id: http://svn.vdombox.ru/flextools/trunk@8458 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/BaseVisualEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/BaseVisualEditor.mxml
@@ -8,6 +8,8 @@
 			
 			import net.vdombox.ide.common.model._vo.PageVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			
 			private var _objectVO : PageVO;
 			
@@ -33,13 +35,8 @@
 			
 			protected function scroller_creationCompleteHandler(event:FlexEvent):void
 			{
-				scroller.horizontalScrollBar.height = 12;
-				
-				scroller.horizontalScrollBar.thumb.height = 12;
-				scroller.verticalScrollBar.thumb.width = 12;
-				
-				scroller.horizontalScrollBar.track.height = 12;
-				scroller.verticalScrollBar.track.width = 12;
+				scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
 			}
 			
 		]]>
