git-svn-id: http://svn.vdombox.ru/flextools/trunk@8459 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -19,6 +19,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.ide.modules.events.events.WorkAreaEvent;
 			import net.vdombox.ide.modules.events.view.components.BaseElement;
@@ -42,13 +44,8 @@
 				
 				addEventListener(ElementEvent.MOUSE_DOWN, elementMouseDownHandler, true, 0, true );
 				
-				scroller.horizontalScrollBar.height = 12;
-				
-				scroller.horizontalScrollBar.thumb.height = 12;
-				scroller.verticalScrollBar.thumb.width = 12;
-				
-				scroller.horizontalScrollBar.track.height = 12;
-				scroller.verticalScrollBar.track.width = 12;
+				scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
 			}
 			
 			protected function showElementsView_creationCompleteHandler( event : FlexEvent ) : void
