git-svn-id: http://svn.vdombox.ru/flextools/trunk@8460 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
@@ -13,8 +13,8 @@
 			import mx.events.ResizeEvent;
 			
 			import net.vdombox.editors.ScriptAreaComponent;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 
 
 			private var hcw : ChangeWatcher;
