--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaHScrollBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaHScrollBarSkin.mxml
@@ -24,8 +24,7 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="35" width="100%" height="8"
-    alpha.normal="1" alpha.disabled="0.2" alpha.inactive="0.2">
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" width="100%" height="100%">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -56,16 +55,7 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
         {
             useChromeColor = true;
             super.initializationComplete();
-			thumb.skin.addEventListener( StateChangeEvent.CURRENT_STATE_CHANGE, setTrackAlpha );
         }
-		
-		private function setTrackAlpha( event : StateChangeEvent ) : void
-		{
-			if ( event.newState == "down" || event.newState == "over" )
-				track.skin.alpha = 0.25;
-			else
-				track.skin.alpha = 0.15;
-		}
 		
 	</fx:Script>
     
@@ -75,12 +65,12 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
         <s:State name="inactive" />
     </s:states>
 
-    <s:Button id="track" left="0" right="0" width="100%"  height="8"
+    <s:Button id="track" left="0" right="0" width="100%"  height="10"
 			  focusEnabled="false"
-              skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarTrackSkin" />
+              skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaHScrollBarTrackSkin" />
 
-    <s:Button id="thumb" height="8"
+    <s:Button id="thumb" height="10"
               focusEnabled="false" visible.inactive="false" cornerRadius="5"
-              skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarTrumbSkin"/>
+              skinClass="net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaHScrollBarTrumbSkin"/>
 
 </s:SparkSkin>
