--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaHScrollBarTrumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaHScrollBarTrumbSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009">
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" xmlns:mx="library://ns.adobe.com/flex/mx">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -50,13 +50,18 @@
 		</s:Rect>
 	</s:HGroup>-->
 	
-	<s:Rect left="1" radiusX="{height / 2}" radiusY="{height / 2}" width="100%" height="100%"
-			alpha.over="1" alpha.down="1" alpha.up="0.5" alpha="0.5" >
+	<s:Rect left="1" radiusX="{height / 2}" radiusY="{height / 2}" width="100%" height="100%">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#707070" />
-				<s:GradientEntry color="#909090" />
+				<s:GradientEntry color="#a6a6a6" />
+				<s:GradientEntry color="#939393" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
+	
+	<s:HGroup width="100%" height="100%"
+			  verticalAlign="middle" horizontalAlign="center">
+		<mx:Image source="@Embed('assets/vdomscrollbar/HorisontalScroll.png')" smoothBitmapContent="true"/>
+	</s:HGroup>
+	
 </s:SparkSkin>
