--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMWorkAreaScrollBarSkin/VDOMWorkAreaVScrollBarThumbSkin.mxml
@@ -22,7 +22,7 @@
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
     xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
-	width="100%" height="100%">
+	width="100%" height="100%" xmlns:mx="library://ns.adobe.com/flex/mx">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -70,14 +70,20 @@
 		</s:Rect>
 	</s:VGroup>-->
 	
-	<s:Rect top="1" width="100%" height="100%" radiusX="{width / 2}" radiusY="{ width / 2 }"
-			alpha.over="1" alpha.down="1">
+	<s:Rect top="1" width="100%" height="100%" radiusX="{width / 2}" radiusY="{ width / 2 }">
 		<s:fill>
 			<s:LinearGradient>
 				<s:GradientEntry color="#a6a6a6" />
-				<s:GradientEntry color="#949494" />
+				<s:GradientEntry color="#939393" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
+	
+	<s:HGroup width="100%" height="100%"
+			  verticalAlign="middle" horizontalAlign="center">
+		<mx:Image source="@Embed('assets/vdomscrollbar/VerticalScroll.png')" smoothBitmapContent="true"/>
+	</s:HGroup>
+	
+	
 	
 </s:SparkSkin>
