--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -55,6 +55,7 @@
 				
 				if ( value && value.length > 0 )
 				{
+					createServerAction.visible = true;
 					var newSelectedIndex : int = 0;
 
 					if ( oldSelectedItem )
@@ -94,6 +95,7 @@
 				}
 				else
 				{
+					createServerAction.visible = false;
 					_scripts = null;
 					
 					if( actionList.selectedIndex != -1 )
@@ -158,7 +160,8 @@
 			  smoothBitmapContent="true"/>
 	
 	<mx:Image id="createServerAction" source="{VDOMImage.Plus}" height="20" width="20" right="10" top="-23" 
-			  smoothBitmapContent="true" click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.CREATE_ACTION ) )"/>
+			  smoothBitmapContent="true" click="dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.CREATE_ACTION ) )"
+			  visible="false"/>
 
 	<s:List id="actionList"
 			dataProvider="{ _scripts }" height="100%" labelField="name" width="100%"
