git-svn-id: http://svn.vdombox.ru/flextools/trunk@8463 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/Tree.mxml
@@ -46,12 +46,12 @@
 		
 		s|VScrollBar
 		{	
-			skinClass: ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin");  
+			skinClass: ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMVScrollBarSkin");  
 		}
 		
 		s|HScrollBar
 		{	
-			skinClass: ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin");  
+			skinClass: ClassReference("net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMHScrollBarSkin");  
 		}
 	</fx:Style>
 	
