--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResizableScrollerSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResizableScrollerSkin.mxml
@@ -34,8 +34,8 @@ viewport property to link them together.
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.resize.ResizeManager;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
 			import spark.components.supportClasses.Skin;
 			
@@ -79,8 +79,8 @@ viewport property to link them together.
 			private function created(event:FlexEvent):void {
 				// the component being resized is assumed to be the parent of the scroller
 				// since most scrollers set left/right/top/bottom=0
-				verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
-				horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
+				verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
+				horizontalScrollBar.setStyle( "skinClass", VDOMHScrollBarSkin );
 				
 				var resizeComponent:UIComponent = (hostComponent.parent as UIComponent);
 				// Sometimes the parent is actually a skin, in which case we need to resize the host component, not the skin
