--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
@@ -13,18 +13,16 @@
 			
 			import net.vdombox.ide.common.events.WindowEvent;
 			import net.vdombox.ide.common.view.components.VDOMImage;
-			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
 			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
 				hostComponent.title = resourceManager.getString( 'Tree_General', 'create_page_title' );
 			}
 			
 			protected function pageTypeList_creationCompleteHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
-				pageTypeList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
+				pageTypeList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
 				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
 			}
 			
@@ -75,10 +73,12 @@
 					</s:fill>
 				</s:Rect>
 				
-				<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="right" paddingRight="10">
+				<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="right" paddingRight="10" paddingLeft="10">
 					
 					<button:VDOMButton label="Cancel"
 										   click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_CANCEL ) )" />
+					
+					<mx:Spacer width="100%"/>
 					
 					<button:VDOMButton label="Create"
 							  click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_APPLY ) )" />
