--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/NameObjectWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/NameObjectWindowSkin.mxml
@@ -54,16 +54,17 @@
 				
 				<s:Rect width="100%" height="100%">
 					<s:fill>
-						<s:SolidColor color="#353535"/>
+						<s:SolidColor color="#2f2f2f"/>
 					</s:fill>
 				</s:Rect>
 				
 				<s:VGroup width="100%" height="100%" verticalAlign="middle" paddingLeft="12" paddingRight="12" gap="8">
 					
-					<s:Label color="#FFFFFF" text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Name' ) }" />
+					<s:Label color="#fffafc" text="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Name' ) }" />
 					
 					<s:TextInput id="tableName"  width="100%" creationComplete="tableName_creationCompleteHandler(event)"
-								 skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"/>
+								 color="#fffafc"
+								 skinClass="net.vdombox.ide.common.view.skins.TextInputBlackSkin"/>
 					
 				</s:VGroup>
 				
@@ -74,15 +75,17 @@
 			
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source="{VDOMImage.Fon_Texture}" />
+					<s:SolidColor color="#3a3a3a" />
 				</s:fill>
 			</s:Rect>
 			
-			<s:HGroup width="100%" height="45" verticalAlign="middle" horizontalAlign="right"  paddingRight="10">
-				
-				<button:VDOMButton id="ok" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_OK' ) }" click="{hostComponent.ok_close_window()}"/>
+			<s:HGroup width="100%" height="45" verticalAlign="middle" horizontalAlign="right"  paddingRight="10" paddingLeft="10">
 				
 				<button:VDOMButton id="cancel" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_Cancel' ) }" click="{hostComponent.no_close_window()}"/>
+				
+				<mx:Spacer width="100%"/>
+				
+				<button:VDOMButton id="ok" label="{ resourceManager.getString( 'DataBase_General', 'create_new_object_window_OK' ) }" click="{hostComponent.ok_close_window()}"/>
 				
 			</s:HGroup>
 			
