git-svn-id: http://svn.vdombox.ru/flextools/trunk@8470 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -368,8 +368,8 @@
 			</s:fill>
 		</s:Rect>
 
-		<s:VGroup width="22" height="100%" verticalAlign="middle" horizontalAlign="center">
-			<components:EyeImage id="eyes" width="16" height="14" />
+		<s:VGroup left="9" width="22" height="100%" verticalAlign="middle" horizontalAlign="center">
+			<components:EyeImage id="eyes" width="16" height="16" />
 		</s:VGroup>
 
 	</s:Group>
