git-svn-id: http://svn.vdombox.ru/flextools/trunk@8473 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
@@ -46,8 +46,8 @@
 			bottom="0" left="0" right="0" top="0">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#b70000" />
-				<s:GradientEntry color="#a00000" />
+				<s:GradientEntry color="#b70000" color.selectedStates="#959595"/>
+				<s:GradientEntry color="#a00000" color.selectedStates="#959595"/>
 			</s:LinearGradient>
 		</s:fill>
 		
