--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -4,7 +4,8 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true"
 				doubleClickEnabled="true"
-				doubleClick="doubleClickHandler(event)" height="55" >
+				doubleClick="doubleClickHandler(event)" height="65"
+				creationComplete="itemrenderer1_creationCompleteHandler(event)">
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="selected" />
@@ -14,10 +15,13 @@
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
+			import mx.graphics.SolidColorStroke;
 			import mx.utils.ObjectUtil;
 			
 			import net.vdombox.ide.common.model._vo.ApplicationVO;
 			import net.vdombox.ide.common.model._vo.ResourceVO;
+			
+			import spark.primitives.Line;
 			
 			public static const RENDERER_CHANGED : String = "rendererChanged";
 			public static const RENDERER_DOUBLE_CLICK : String = "rendererDoubleClick";
@@ -54,7 +58,37 @@
 					if (!value)
 						return;
 					
-					nameLabel.text = applicationVO ?  applicationVO.name : "";
+					if ( applicationVO )
+					{
+						nameLabel.text = applicationVO.name;
+						
+						applicationDescription.text = applicationVO.description;
+						
+						pages.text = resourceManager.getString( 'Core_General', 'create_edit_application_pages' ) + " - " + applicationVO.numberOfPages;
+						
+						objects.text = resourceManager.getString( 'Core_General', 'create_edit_application_objects' ) + " - " + applicationVO.numberOfObjects;
+						
+						version.text = applicationVO.version != "" ? ( resourceManager.getString( 'Core_General', 'create_edit_application_version' ) + ": " +  applicationVO.version ) : "";
+						
+						toolTip = applicationVO.description;
+					}
+					else
+					{
+						nameLabel.text = "";
+						
+						applicationDescription.text = "";
+						
+						pages.text = "";
+						
+						objects.text = "";
+						
+						version.text = ""
+							
+						toolTip = "";
+					}
+					
+					
+					
 					
 					validateResourceVO();
 			}
@@ -103,26 +137,97 @@
 				dispatchEvent( new Event( RENDERER_DOUBLE_CLICK ) );
 			}
 			
+			protected function itemrenderer1_creationCompleteHandler(event:FlexEvent):void
+			{
+				var _w : int = this.width;
+				var _h : int = this.height - 2;
+				
+				var strokeColor : SolidColorStroke = new SolidColorStroke();
+				strokeColor.color = 0x484848;
+				strokeColor.weight = 2;
+				
+				for ( var i : int = 0; i < _w; i += 5 )
+				{
+					var line : Line = new Line();
+					line.xFrom = i;
+					line.yFrom = _h;
+					line.xTo = i + 2;
+					line.yTo = _h;
+					line.stroke = strokeColor;
+					lineGroup.addElement( line );
+				}
+				
+				setVisinleLine( currentState );
+			}
+			
+			override protected function stateChanged( oldState : String, newState : String, recursive : Boolean ) : void
+			{
+				setVisinleLine( newState );
+			}
+			
+			private function setVisinleLine( state : String ) : void
+			{
+				var line : Line;
+				var _visible : Boolean = state == "normal" ? true : false;
+				
+				for ( var i : int = 0; i < lineGroup.numElements; i++ )
+				{
+					line = lineGroup.getElementAt( i ) as Line;
+					line.visible = _visible;
+				}
+			}
+			
 		]]>
 	</fx:Script>
 	<s:Rect id="fill"
 			bottom="0" left="0" right="0" top="0">
 		<s:fill>
-			<s:LinearGradient rotation="90">
-				<s:GradientEntry color.normal="#424242" color.selected="#FFFFFF" />
-				<s:GradientEntry color.normal="#191919" color.selected="#C6C6C6" />
-			</s:LinearGradient>
+			<s:SolidColor color="#2f2f2f" color.selected="#39829d" />
 		</s:fill>
 		
 	</s:Rect>
 	
-	<s:HGroup width="100%" height="100%" verticalAlign="middle" x="10">
+	<s:HGroup width="100%" height="100%" 
+			  verticalAlign="middle" x="10" 
+			  paddingTop="12" paddingBottom="12"
+			  gap="10">
 		<mx:Image id="imageHolder"
 				  width="40" height="40"/>
 		
-		<s:Label id="nameLabel" 
-				 fontSize="15" color.normal="#FFFFFF" color.selected="#000000"/>
+		<s:VGroup width="120" height="100%" gap="0">
+			
+			<s:Label id="nameLabel"  width="120"
+					 fontSize="15" color="#FFFFFF"/>
+			
+			<mx:Spacer height="100%" />
+			
+			<s:Label id="version" color="#8b8787"/>
+			
+		</s:VGroup>
+		
+		<s:VGroup width="50%" height="100%" gap="2">
+			<s:HGroup width="100%">
+				<s:Label id="pages" color="#ffffff"/>
+				
+				<s:Label id="objects" color="#ffffff"/>
+			</s:HGroup>
+			
+			<s:TextArea id="applicationDescription"
+						width="100%"
+						height="100%"
+						editable="false"
+						selectable="false"
+						borderVisible="false"
+						color="#8b8787"
+						fontFamily="Arial"
+						fontSize="10" 
+						paddingLeft="0"
+						/>
+		</s:VGroup>
+		
 	</s:HGroup>
+	
+	<s:Group id="lineGroup" width="100%" height="100%"/>
 	
 	
 	
